# parse-video-py

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  README.md  main.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/skills/analyze-video-url/: SKILL.md
.github/workflows/: docker.yml  python-app.yml
.out-of-scope/: javascript-cloudflare-worker-port.md
docs/adr/: 0001-proxy-support.md
docs/knowledge/: 00_ai_entry.md  01_product.md  02_project_map.md  03_core_flows.md  04_code_rules.md  05_change_safety.md  06_build_run_deploy.md  99_global_index.md
docs/superpowers/plans/: 2026-04-19-uv-package-refactor.md  2026-04-23-migrate-parsers.md
docs/superpowers/specs/: 2026-04-19-uv-package-refactor-design.md  2026-04-23-migrate-parsers-design.md
parser/: __init__.py  acfun.py  base.py  bilibili.py  doupai.py  douyin.py  haokan.py  kuaishou.py  lvzhou.py  meipai.py  pipigaoxiao.py  pipixia.py  quanmin.py  quanminkge.py  redbook.py  sixroom.py  weibo.py  weishi.py  xigua.py  youtube.py  zuiyou.py
src/parse_video_py/: __init__.py  utils.py  web.py
src/parse_video_py/cli/: __init__.py  _parse.py  output.py
src/parse_video_py/parser/: __init__.py  acfun.py  base.py  bilibili.py  cctv.py  doupai.py  douyin.py  haokan.py  huya.py  kuaishou.py  lishipin.py  lvzhou.py  meipai.py  pipigaoxiao.py  (+13 more)
templates/: index.html
tests/: test_cctv.py  test_cli.py  test_main.py  test_new_parsers_routing.py  test_qqvideo.py  test_sohu.py  test_twitter.py  test_utils.py  test_youtube.py
utils/: __init__.py
(+1 files in other folders)
