[project]
name = "parse-video-py"
version = "0.0.2"
description = "视频解析服务，支持 20+ 平台去水印解析"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "aiohttp>=3.9",
    "fake-useragent>=1.5",
    "lxml>=5.0",
    "parsel>=1.9",
    "httpx>=0.27",
    "jmespath>=1.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
web = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jinja2>=3.1",
    "python-multipart>=0.0.20",
    "fastapi-mcp>=0.4",
]
cli = [
    "typer>=0.12",
    "rich>=13.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-timeout>=2.2",
    "black>=24.0",
    "isort>=5.13",
    "flake8>=7.0",
    "pre-commit>=3.7",
]
all = ["parse-video-py[web,cli]"]

[project.scripts]
parse-video-py = "parse_video_py.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/parse_video_py"]

[tool.black]
line-length = 88

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
